tests/errors/guard-insufficient.fil
component Main<G>(
  @interface<G, 3> go_G: 1,
  @[G, G+2] left: 32,
  @[G, G+1] + @exact[G, G+1] sel: 1
) -> (
  @[G, G+1] out: 32,
) {
  out = sel ? left;
}
