tests/errors/guard-insufficient.expect
---STDERR---
error: Cannot prove constraint G+1 >= G+2
  ┌─ tests/errors/guard-insufficient.fil:7:9
  │
7 │   out = sel ? left;
  │         ^^^   ---- Source is active for [G, G+2]
  │         │      
  │         Guard must be active for at least as long as the source
  │         Guard is active during [G, G+1]

